fix body overflow

--- a/styl/style.styl
+++ b/styl/style.styl
@@ -39,6 +39,7 @@ body
 	overflow-x: hidden;
 	flex-direction: column;
 	height: 100%;
+	overflow-x hidden
 
 
 
